--- a/firebase.json
+++ b/firebase.json
@@ -15,5 +15,13 @@
   },
   "storage": {
     "rules": "storage.rules"
-  }
+  },
+  "database": {
+    "rules": "database.rules.json"
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.rules"
+  },
+  "extensions": {}
 }
